--- a/csharp/ServerSideExtension/ServerSideExtension.csproj
+++ b/csharp/ServerSideExtension/ServerSideExtension.csproj
@@ -70,7 +70,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>"$(ProjectDir)generate_SSE_Stubs_from_proto.bat" "$(ProjectDir)"</PreBuildEvent>
+    <PreBuildEvent>"$(ProjectDir)generate_SSE_Stubs_from_proto.sh" "$(ProjectDir)"</PreBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\Grpc.Core.1.7.3\build\net45\Grpc.Core.targets" Condition="Exists('..\packages\Grpc.Core.1.7.3\build\net45\Grpc.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -79,7 +79,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Grpc.Core.1.7.3\build\net45\Grpc.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Grpc.Core.1.7.3\build\net45\Grpc.Core.targets'))" />
   </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
