Updated to include Linux target

--- a/csharp/ServerSideExtension/ServerSideExtension.csproj
+++ b/csharp/ServerSideExtension/ServerSideExtension.csproj
@@ -30,6 +30,20 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Linux|AnyCPU'">
+    <OutputPath>bin\Linux\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+  </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Google.Protobuf, Version=3.5.0.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
@@ -70,7 +84,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>"$(ProjectDir)generate_SSE_Stubs_from_proto.sh" "$(ProjectDir)"</PreBuildEvent>
+    <PreBuildEvent>if $(ConfigurationName) == Linux  (
+"$(ProjectDir)generate_SSE_Stubs_from_proto.sh" "$(ProjectDir)"
+) ELSE (
+ "$(ProjectDir)generate_SSE_Stubs_from_proto.bat" "$(ProjectDir)"
+)</PreBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\Grpc.Core.1.7.3\build\net45\Grpc.Core.targets" Condition="Exists('..\packages\Grpc.Core.1.7.3\build\net45\Grpc.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
