--- a/docker/sse2rserve/sse2rserve.config
+++ b/docker/sse2rserve/sse2rserve.config
@@ -17,7 +17,7 @@
                 <value>0.0.0.0</value>   <!-- Set to 0.0.0.0 to make it reachable from the outside world -->
             </setting>
             <setting name="rserveHost" serializeAs="String">
-                <value>rserve</value> <!-- This is set to match the rserve docker name, can be changed to match your configuration -->
+                <value>rServeHost</value> 
             </setting>
             <setting name="rservePort" serializeAs="String">
                 <value>6311</value>
