Updated To single docker image (without R packages)

--- a/csharp/Dockerfile
+++ b/csharp/Dockerfile
@@ -2,13 +2,15 @@ FROM microsoft/dotnet:2.1-runtime AS dotnet_r_base
 
 RUN apt-get update \
   && apt-get upgrade -y \
-  && apt-get install r-base \
+  && apt-get install -y libssl-dev r-base \
   && apt-get clean
 
-RUN R CMD install.packages("Rserve")
+ADD https://www.rforge.net/Rserve/snapshot/Rserve_1.8-5.tar.gz .
+RUN R CMD INSTALL Rserve_1.8-5.tar.gz
 
 FROM microsoft/dotnet:2.1-sdk as builder
-MAINTAINER "AnalyticsEarth" bbb@qlik.com
+
+LABEL author="AnalyticsEarth"
 
 # Details
 LABEL version="1.1.0"
@@ -17,17 +19,18 @@ LABEL description="SSEtoRserve on dotnetcore with self spawning R instance"
 RUN mkdir -p /root/src/app/sse2rserve
 WORKDIR /root/src/app/sse2rserve
 
-COPY ../csharp/SSEtoRserveCore/SSEtoRserveCore.csproj SSEtoRserveCore/SSEtoRserveCore.csproj
-RUN dotnet restore SSEtoRserveCore/SSEtoRserveCore.csproj
+COPY SSEtoRServeCore/SSEtoRServeCore.csproj SSEtoRServeCore/SSEtoRServeCore.csproj
+RUN dotnet restore SSEtoRServeCore/SSEtoRServeCore.csproj
 
-COPY ../csharp/SSEtoRserveCore/ .
+COPY SSEtoRServeCore/ .
 RUN dotnet publish -c release -o published
 
 FROM dotnet_r_base
 
 WORKDIR /root/
 COPY --from=builder /root/src/app/sse2rserve/published .
+RUN chmod +x ./runservices.sh
 
 EXPOSE 50051/tcp
 EXPOSE 19345/tcp
-CMD ["dotnet","./SSEtoRserveCore.dll"]
+CMD ./runservices.sh
