--- a/csharp/SSEtoRServeCore/NLog.config
+++ b/csharp/SSEtoRServeCore/NLog.config
@@ -44,6 +44,6 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace) to "ASFile" and "console"
     -->
      <!-- <logger name="*" minlevel="Debug" writeTo="ASFile" /> -->
-    <logger name="*" minlevel="Debug" writeTo="console" />
+    <logger name="*" minlevel="Info" writeTo="console" />
   </rules>
 </nlog>
