--- a/csharp/SSEtoRServeCore/SSEtoRServeCore.csproj
+++ b/csharp/SSEtoRServeCore/SSEtoRServeCore.csproj
@@ -22,6 +22,9 @@
     <None Update="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="runservices.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
