--- a/docker/packages_dist/Dockerfile
+++ b/docker/packages_dist/Dockerfile
@@ -3,4 +3,4 @@ FROM analyticsearth/sse2rservecore
 COPY installpackages.r /root/src/scripts/installpackages.r
 WORKDIR /root/src/scripts
 
-RUN Rscript "/root/src/scripts/installpackages.r"
+RUN sudo Rscript "/root/src/scripts/installpackages.r"
