add nlopt from apt

--- a/docker/packages_dist/Dockerfile
+++ b/docker/packages_dist/Dockerfile
@@ -3,4 +3,6 @@ FROM analyticsearth/sse2rservecore
 COPY installpackages.r /root/src/scripts/installpackages.r
 WORKDIR /root/src/scripts
 
-RUN sudo Rscript "/root/src/scripts/installpackages.r"
+RUN apt-get install -y libnlopt-dev
+
+RUN Rscript "/root/src/scripts/installpackages.r"
