--- a/docker/packages_dist/Dockerfile
+++ b/docker/packages_dist/Dockerfile
@@ -2,7 +2,7 @@ FROM analyticsearth/sse2rservecore
 
 COPY installpackages.r /root/src/scripts/installpackages.r
 
-RUN pt-get update \
+RUN apt-get update \
   && apt-get install -y libnlopt-dev libcurl4-openssl-dev
 
 RUN Rscript "/root/src/scripts/installpackages.r"
