clean up tmp folder

--- a/docker/packages_dist/Dockerfile
+++ b/docker/packages_dist/Dockerfile
@@ -5,4 +5,5 @@ COPY installpackages.r /root/src/scripts/installpackages.r
 RUN apt-get update \
   && apt-get install -y libnlopt-dev libcurl4-openssl-dev libxml2-dev \
   && apt-get clean \
-  && Rscript "/root/src/scripts/installpackages.r"
+  && Rscript "/root/src/scripts/installpackages.r" \
+  && rm -rf /tmp/*
