--- a/csharp/SSEtoRServeCore/NLog.config
+++ b/csharp/SSEtoRServeCore/NLog.config
@@ -4,7 +4,7 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
+      internalLogLevel="Off" internalLogFile="logs/nlog-internal.log">
 
   <!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
@@ -26,6 +26,7 @@
     <!--
     Write events to a file with the date in the filename.
     -->
+    <!--
     <target name="ASFile" xsi:type="AsyncWrapper" overflowAction="Block" queueLimit="10000" batchSize="1000" timeToSleepBetweenBatches="100">
       <target xsi:type="File" name="file" keepFileOpen="true" openFileCacheTimeout="5" encoding="utf-8"
               fileName="${basedir}/logs/${shortdate}_SSEtoRserve.log"
@@ -34,6 +35,7 @@
               enableArchiveFileCompression="true"
               archiveFileName="${basedir}/logs/${shortdate}_SSEtoRserve-archive{#}.log" />
     </target>
+    -->
     <target xsi:type="Console" name="console"/>
   </targets>
 
