change install packages folder

--- a/docker/packages_dist/Dockerfile
+++ b/docker/packages_dist/Dockerfile
@@ -1,9 +1,9 @@
 FROM analyticsearth/sse2rservecore
 
-COPY installpackages.r /root/src/scripts/installpackages.r
+COPY installpackages.r /root/installpackages.r
 
 RUN apt-get update \
   && apt-get install -y libnlopt-dev libcurl4-openssl-dev libxml2-dev \
   && apt-get clean \
-  && Rscript "/root/src/scripts/installpackages.r" \
+  && Rscript "/root/installpackages.r" \
   && rm -rf /tmp/*
