--- a/docker/packages_dist/Dockerfile
+++ b/docker/packages_dist/Dockerfile
@@ -1,9 +1,10 @@
 FROM analyticsearth/sse2rservecore
 
 COPY installpackages.r /root/installpackages.r
-
+USER root
 RUN apt-get update \
   && apt-get install -y libnlopt-dev libcurl4-openssl-dev libxml2-dev \
   && apt-get clean \
   && Rscript "/root/installpackages.r" \
   && rm -rf /tmp/*
+USER sse2rserve
