--- a/csharp/SSEtoRServeCore/SSEtoRServeCore.csproj
+++ b/csharp/SSEtoRServeCore/SSEtoRServeCore.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
+    <StartupObject>SSEtoRserve.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
