--- a/csharp/Dockerfile-k8-rserve
+++ b/csharp/Dockerfile-k8-rserve
@@ -2,6 +2,11 @@ FROM r-base
 
 LABEL author="AnalyticsEarth"
 
+RUN apt-get update \
+  && apt-get upgrade -y \
+  && apt-get install -y libssl-dev \
+  && apt-get clean
+
 ADD https://www.rforge.net/Rserve/snapshot/Rserve_1.8-6.tar.gz .
 RUN R CMD INSTALL Rserve_1.8-6.tar.gz
 
