--- a/csharp/Dockerfile-k8-rserve
+++ b/csharp/Dockerfile-k8-rserve
@@ -11,7 +11,13 @@ ADD https://www.rforge.net/Rserve/snapshot/Rserve_1.8-6.tar.gz .
 RUN R CMD INSTALL Rserve_1.8-6.tar.gz
 
 COPY runservice-rserve.sh runservice-rserve.sh
+RUN groupadd -r rserve \
+ && useradd -g rserve --create-home --shell /bin/bash rserve
+
+RUN chown rserve:rserve . && \
+   chmod +x -R /runservice-rserve.sh
 
 EXPOSE 6311/tcp
+USER rserve
 
 ENTRYPOINT ./runservice-rserve.sh
