--- a/csharp/SSEtoRServeCore/NLog.config
+++ b/csharp/SSEtoRServeCore/NLog.config
@@ -26,7 +26,8 @@
     <!--
     Write events to a file with the date in the filename.
     -->
-    
+
+    <!--
     <target name="ASFile" xsi:type="AsyncWrapper" overflowAction="Block" queueLimit="10000" batchSize="1000" timeToSleepBetweenBatches="100">
       <target xsi:type="File" name="file" keepFileOpen="true" openFileCacheTimeout="5" encoding="utf-8"
               fileName="${basedir}/logs/${shortdate}_SSEtoRserve.log"
@@ -35,6 +36,7 @@
               enableArchiveFileCompression="true"
               archiveFileName="${basedir}/logs/${shortdate}_SSEtoRserve-archive{#}.log" />
     </target>
+    -->
     
     <target xsi:type="Console" name="console"/>
   </targets>
@@ -46,6 +48,6 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace) to "ASFile" and "console"
     -->
      <!-- <logger name="*" minlevel="Debug" writeTo="ASFile" /> -->
-    <logger name="*" minlevel="Debug" writeTo="console" />
+    <logger name="*" minlevel="Info" writeTo="console" />
   </rules>
 </nlog>
