--- a/csharp/SSEtoRServeCore/SSEtoRServeCore.csproj
+++ b/csharp/SSEtoRServeCore/SSEtoRServeCore.csproj
@@ -5,6 +5,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
     <StartupObject>SSEtoRserve.Program</StartupObject>
+    <Version>2.0.0</Version>
+    <Authors>Steven Pressland</Authors>
+    <Company>Qlik</Company>
   </PropertyGroup>
 
   <ItemGroup>
